# automata_rs

./: Cargo.toml  README.md
examples/example_macro/: Cargo.toml
examples/example_macro/src/: main.rs
examples/example_plain/: Cargo.toml
examples/example_plain/src/: main.rs
src/: lib.rs
src/automata_macro/: Cargo.toml
src/automata_macro/src/: lib.rs
