[package]
name = "automata_macro"
version = "0.1.0"
authors = ["Roman Khranovskiy <hranitel.52@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.58", features = ["full"] }
quote = "1.0.8"